update the game MinesweeperGame level 5